# cabbage

./: .gitignore  .gitmodules  .travis.yml  .travisOSX.yml  CMakeLists.txt  CabbageCsoundCLI.jucer  CabbageIDE.jucer  CabbageLite.jucer  CabbagePlugin.jucer  CabbagePluginMIDIEffect.jucer  CabbagePluginNoStandalone.jucer  CabbagePluginStandalone.jucer  CabbagePluginSynth.jucer  CabbagePluginUnity.jucer  appveyor.yml  azure-pipelines.yml  build.ps1  build.py  buildAll.py  buildLinux.sh  buildOSX.sh  buildWindows.ps1  bump.sh  cabbage2.jucer  commit.py  commitScript.py  fmod_csound.dylib  fmod_csound_fx.dylib  juce_astyle.options  readme.md  saveJucer.py
Builds/: opcodes.txt  readme.md
Builds/CLion/: CMakeLists.txt  Debug-Info-AU.plist  Debug-Info-Standalone_Plugin.plist  Debug-Info-VST.plist  Debug-Info-VST3.plist  PkgInfo
Builds/LinuxMakefile/: Cabbage.desktop  CabbageLite.desktop  MakeCabbageIDE  MakePluginEffect  MakePluginSynth  Makefile  MakefileIDE  MakefilePlugin  buildCabbage  buildCabbageAzure.sh  buildDebPackage.sh  configureMakefiles.py  control  dummy.desktop  installCabbage  makeProjectCaches  projucerConfig.sh  readme.md
Builds/MacOSX/: CabbageOSXInstaller-.pkg  Icon.icns  Info-AU.plist  Info-App.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Installer.pkgproj  InstallerAzure.pkgproj  InstallerTravis.pkgproj  buildCabbage.py  buildCabbage.sh  buildCabbagePro.sh  buildTravis.sh  readme.md
Builds/VisualStudio2015/: Cabbage64InstallerCanonical.nsi  buildCabbage64.bat
Builds/VisualStudio2017/: Cabbage.sln  Cabbage64InstallerCanonical.nsi  CabbageCannonicalInstaller.iss  CabbageLite.sln  CabbageLite_App.vcxproj  CabbageLite_App.vcxproj.filters  CabbagePlugin.sln  CabbagePlugin_SharedCode.vcxproj  CabbagePlugin_SharedCode.vcxproj.filters  CabbagePlugin_StandalonePlugin.vcxproj  CabbagePlugin_StandalonePlugin.vcxproj.filters  CabbagePlugin_VST.vcxproj  CabbagePlugin_VST.vcxproj.filters  CabbagePlugin_VST3.vcxproj  CabbagePlugin_VST3.vcxproj.filters  Cabbage_App.vcxproj  Cabbage_App.vcxproj.filters  appveyorBuildCabbage64.bat  azureBuildCabbage64.bat  buildCabbage64.bat  resources.rc
Builds/VisualStudio2019/: Cabbage.sln  CabbageCsoundCLI.sln  CabbageCsoundCLI_ConsoleApp.vcxproj  CabbageCsoundCLI_ConsoleApp.vcxproj.filters  CabbagePlugin.sln  CabbagePlugin_SharedCode.vcxproj  CabbagePlugin_SharedCode.vcxproj.filters  CabbagePlugin_StandalonePlugin.vcxproj  CabbagePlugin_StandalonePlugin.vcxproj.filters  CabbagePlugin_VST.vcxproj  CabbagePlugin_VST.vcxproj.filters  CabbagePlugin_VST3.vcxproj  CabbagePlugin_VST3.vcxproj.filters  Cabbage_App.vcxproj  Cabbage_App.vcxproj.filters  buildCabbage64.bat  resources.rc
Builds/iOS/: Info-App.plist
CiScripts/: buildLinuxCI.sh  buildMacCI.sh  buildWindowsCI.ps1
CsoundTestWin64/: CsoundTest.sln
CsoundTestWin64/CsoundTest/: CsoundTest.cpp  CsoundTest.vcxproj  CsoundTest.vcxproj.filters  stdafx.cpp
CsoundTestWin64/Debug/: CsoundTest.exp  CsoundTest.lib
CsoundTestXcode/CsoundTest.xcodeproj/: project.pbxproj
Docs/: README.md  SUMMARY.md  add_new_widgets.md  android.md  audio_graph.md  beginner_synth.md  button.md  button_file.md  button_info.md  cabbage_audio_unit.md  cabbage_syntax.md  cabbage_widgets.md  checkbox.md  combobox.md  constants_and_variables.md  controlling.md  convertDocsToOnlineDocs.py  convertMds.py  csound.md  csound_output.md  distributing.md  docs.yml  encoder.md  exporting.md  extras.md  fftdisplay.md  first_effect.md  first_synth.md  form.md  generateWidgetManualEntries.py  gentable.md  groupbox.md  gui_designer.md  host_info.md  hrange.md  identchannels.md  image.md  introduction.md  keyboard.md  keywords.md  (+19 more)
Docs/CabbageDocs/: SUMMARY.html  add_new_widgets.html  android.html  audio_graph.html  beginner_synth.html  button.html  button_file.html  button_info.html  cabbage_audio_unit.html  cabbage_in_host.html  cabbage_studio.html  cabbage_syntax.html  cabbage_widgets.html  checkbox.html  combobox.html  constants_and_variables.html  controlling.html  csound.html  csound_output.html  distributing.html  encoder.html  exporting.html  features.html  file_structure_and_syntax.html  first_effect.html  first_synth.html  form.html  gentable.html  groupbox.html  gui_designer.html  host_info.html  hrange.html  identchannels.html  image.html  index.html  introduction.html  keyboard.html  keywords.html  label.html  listbox.html  (+25 more)
Docs/PythonUtilityScripts/: addCCLicense.py  addLegacyStyling.py  convertDocsToOnlineDocs.py  convertMds.py  convertToCamelCase.py  generateGifsFromExamples.py  generateWidgetManualEntries.py  include.py  insertStringToFiles.py  modifyExamples.py  readme.md  removeFirstLineFromFiles.py  removeSampleRateAssignments.py  textToRaw.py
Docs/Styles/: DocStyle.css  menu.css
Docs/Widgets/: button.md  button_file.md  button_info.md  checkbox.md  combobox.md  csound_output.md  encoder.md  form.md  gentable.md  groupbox.md  hrange.md  image.md  keyboard.md  label.md  listbox.md  meter.md  numberbox.md  signaldisplay.md  sliders.md  soundfiler.md  textbox.md  texteditor.md  vrange.md  xypad.md
Docs/_book/: DocStyle.css  add_new_widgets.html  android.html  beginner_synth.html  button.html  button_file.html  button_info.html  csound.html  (+50 more)
Examples/: cabbageCreateColours.csd
Images/: CabbageBinaryData.cpp  CabbageBinaryData.h
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
LV2/: LV2.mk  addLV2Support.sh
Source/: Cabbage.cpp  Cabbage.h  CabbageApplication.cpp  CabbageApplication.h  CabbageCommonHeaders.h  CabbageGenericPluginLookAndFeel.cpp  CabbageGenericPluginLookAndFeel.h  CabbageIDELookAndFeel.cpp  CabbageIDELookAndFeel.h  CabbageIds.h  CabbageLookAndFeel.cpp  CabbageLookAndFeel.h  CabbageMainDocumentWindow.cpp  CabbageMainDocumentWindow.h  CabbageMessageSystem.cpp  CabbageMessageSystem.h  CabbageNewProjectWindow.cpp  CabbageNewProjectWindow.h  testCsoundFile.cpp
patches/: AUWrapper.patch  LinuxFile.patch  StandaleonWrapper.patch  Standalone.patch  StandaloneWrapper.patch  UtilityWrapper.patch  VST2Wrapper.patch  VST3Wrapper.patch
(+1635 files in other folders)
